--- a/dcgan_atari_train.ipynb
+++ b/dcgan_atari_train.ipynb
@@ -581,46 +581,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q3dYJ6dloj-7",
-        "outputId": "310d4a8a-42bd-4c8a-e9c8-3e01df78d4dd"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Generator(\n",
-            "  (pipe): Sequential(\n",
-            "    (0): ConvTranspose2d(100, 512, kernel_size=(4, 4), stride=(1, 1))\n",
-            "    (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-            "    (2): ReLU()\n",
-            "    (3): ConvTranspose2d(512, 256, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
-            "    (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-            "    (5): ReLU()\n",
-            "    (6): ConvTranspose2d(256, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
-            "    (7): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-            "    (8): ReLU()\n",
-            "    (9): ConvTranspose2d(128, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
-            "    (10): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-            "    (11): ReLU()\n",
-            "    (12): ConvTranspose2d(64, 3, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
-            "    (13): Tanh()\n",
-            "  )\n",
-            ")\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -653,6 +613,7 @@
         }
       ],
       "source": [
+        "# training loops\n",
         "net_discr = Discriminator(input_shape=input_shape).to(device)\n",
         "net_gener = Generator(output_shape=input_shape).to(device)\n",
         "writer = SummaryWriter()\n",
